sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: ecart is already defined as variable ecart
	var ecart = getNombreValeurs()
            ^AlgCombSort:11: error: not found: value n
			while ( i+ ecart < n) {
                                           ^